--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
     "psr/log": "~1.0",
     "zendframework/zend-diactoros": "^1.1"
   },
+  "require-maybe": {
+    "zendframework/stratigility": "^1.1"
+  },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
     "squizlabs/php_codesniffer": "2.*"
