--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,7 @@
     "php": "^5.5 || ^7.0",
     "psr/http-message": "~1.0",
     "psr/log": "~1.0",
-    "zendframework/zend-diactoros": "^1.1"
-  },
-  "require-maybe": {
-    "reliv/server": "^0.1",
+    "zendframework/zend-diactoros": "^1.1",
     "zendframework/stratigility": "^1.1"
   },
   "require-dev": {
