--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "php": "^5.5 || ^7.0",
     "psr/http-message": "~1.0",
     "psr/log": "~1.0",
+    "zendframework/zend-expressive": "^1.0",
     "zendframework/zend-diactoros": "^1.1",
     "zendframework/zend-stratigility": "^1.1"
   },
